fixing windows and choosing a robot